--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "to-do",
   "private": true,
+  "homepage": "https://lukasrib15.github.io/to-do/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.3",
+    "gh-pages": "^5.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
